// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button With Emoji 1`] = `
<button
  style={
    Object {
      "backgroundColor": "red",
      "border": "2px solid palevioletred",
      "borderRadius": "3px",
      "color": "Black",
      "fontSize": "40px",
      "margin": "1em",
      "padding": "0.25em 1em",
    }
  }
>
  <span>
    Emoji Button 😎
  </span>
</button>
`;

exports[`Storyshots Button With Hello Text 1`] = `
<button
  style={
    Object {
      "backgroundColor": "red",
      "border": "2px solid palevioletred",
      "borderRadius": "3px",
      "color": "Black",
      "fontSize": "40px",
      "margin": "1em",
      "padding": "0.25em 1em",
    }
  }
>
  Hello Wurld
</button>
`;
